added -reset flag to test driver, seems to fix IE6 problems

--- a/build.xml
+++ b/build.xml
@@ -150,6 +150,7 @@
             <arg value="--tests"/>
             <arg value="all"/>
             <arg value="--verbose"/>
+            <arg value="--reset"/>
         </java>
     </target>
 
