Added ant target 'test-all' that runs tests over available libs (jquery/mootools/prototype)

--- a/test/jsTestDriver.conf
+++ b/test/jsTestDriver.conf
@@ -1,10 +1,11 @@
 server: http://localhost:4224
 
 load:
-# required libs
-  - lib/jquery-1.5.2.js
+# required libs, the first line is expanded to a specific library, dont change it.
+#required.lib
 
-# highcharts source
+# highcharts source, the first line is expanded to a specific adapter, dont change it.
+#required.adapter
   - js/parts/Globals.js
   - js/parts/Utilities.js
   - js/parts/Adapters.js
