--- a/build.xml
+++ b/build.xml
@@ -59,6 +59,9 @@
         <mkdir dir="${minify.dir}"/>
         <mkdir dir="${testoutput.dir}"/>
         <mkdir dir="${coveragereport.dir}"/>
+
+        <delete file="${basedir}/jsTestDriver.conf" failonerror="false"/>
+        <delete file="${basedir}/jsTestDriverCoverage.conf" failonerror="false"/>
     </target>
 
     <!-- Assembles the source parts into one file. -->
@@ -140,13 +143,83 @@
         <echo message="Exit the server by pressing Control-C in the java window."/>
     </target>
 
+    <target name="test-all" description="Runs the unit tests on all adapters. The server must be running (i.e. 'server').">
+        <!-- Param "testrun.name" used in echo output and to build a folder name where test result goes. -->
+        <!-- Param "required.lib" specifies wich third-party lib is used while testing. -->
+        <!-- Param "required.adapter" specifies the corresponding adapter that matches the lib. Leave unset for the built-in jquery support. -->
+
+        <!-- jquery versions -->
+        <antcall target="test-specific-lib">
+            <param name="testrun.name" value="jquery-1.6.2"/>
+            <param name="required.lib" value="jquery-1.6.2.js"/>
+        </antcall>
+        <antcall target="test-specific-lib">
+            <param name="testrun.name" value="jquery-1.6.1"/>
+            <param name="required.lib" value="jquery-1.6.1.js"/>
+        </antcall>
+        <antcall target="test-specific-lib">
+            <param name="testrun.name" value="jquery-1.5.2"/>
+            <param name="required.lib" value="jquery-1.5.2.js"/>
+        </antcall>
+
+        <!-- mootools versions -->
+        <antcall target="test-specific-lib">
+            <param name="testrun.name" value="mootools-1.3.2"/>
+            <param name="required.lib" value="mootools-core-1.3.2-full-compat.js"/>
+            <param name="required.adapter" value="js/adapters/mootools-adapter.src.js"/>
+        </antcall>
+
+        <!-- prototype versions -->
+        <antcall target="test-specific-lib">
+            <param name="testrun.name" value="prototype-1.7.0.0"/>
+            <param name="required.lib" value="prototype-1.7.0.0.js"/>
+            <param name="required.adapter" value="js/adapters/prototype-adapter.src.js"/>
+        </antcall>
+    </target>
+
+    <target name="test" description="Runs the unit tests latest jquery. The server must be running (i.e. 'server').">
+        <antcall target="test-specific-lib">
+            <param name="testrun.name" value="jquery-1.6.2"/>
+            <param name="required.lib" value="jquery-1.6.2.js"/>
+        </antcall>
+    </target>
+
+    <!-- Replace the lib with the specified ones, if set. -->
+    <target name="replace-lib" if="required.lib">
+        <replace file="jsTestDriver.conf" token="#required.lib" value="  - lib/${required.lib}" summary="true"/>
+    </target>
+
+    <!-- Replace the adapter with the specified ones, if set. -->
+    <target name="replace-adapter" if="required.adapter">
+        <replace file="jsTestDriver.conf" token="#required.adapter" value="  - ${required.adapter}" summary="true"/>
+    </target>
+
+    <target name="test-specific-lib" depends="set.properties">
+        <echo message="-----------------------------------------------"/>
+        <echo message=" Running tests using: ${testrun.name}"/>
+        <echo message="-----------------------------------------------"/>
+
+        <!-- Copy the templated jsTestDriver configuration to root. -->
+        <copy file="test/jsTestDriver.conf" todir="${basedir}" overwrite="true"/>
+
+        <!-- Expand the tokens to valid js files. -->
+        <antcall target="replace-lib"/>
+        <antcall target="replace-adapter"/>
+
+        <!-- Create the folder where the report is stored. -->
+        <mkdir dir="${testoutput.dir}/${testrun.name}"/>
+
+        <!-- Run the tests -->
+        <antcall target="run-test"/>
+    </target>
+
     <!-- Runs the tests without coverage. This is much faster than with coverage enabled. -->
-    <target name="test" depends="set.properties" description="Runs the unit tests. The server must be running (i.e. 'server').">
+    <target name="run-test" depends="set.properties">
         <java jar="${jstestdriver.jar}" fork="true">
             <arg value="--config"/>
             <arg value="jsTestDriver.conf"/>
             <arg value="--testOutput"/>
-            <arg value="${testoutput.dir}"/>
+            <arg value="${testoutput.dir}/${testrun.name}"/>
             <arg value="--tests"/>
             <arg value="all"/>
             <arg value="--verbose"/>
@@ -157,6 +230,9 @@
     <!-- Starts the test driver server with coverage enabled. -->
     <!-- This must be done on a separate port to the test-server. -->
     <target name="server-coverage" depends="set.properties" description="Starts the unit test server with coverage enabled on localhost:5225.">
+        <!-- Copy the jsTestDriverCoverage configuration to root. -->
+        <copy file="test/jsTestDriverCoverage.conf" todir="${basedir}" overwrite="true"/>
+
         <exec executable="cmd" dir="${basedir}" >
             <arg value="/k start java -jar ${jstestdriver.jar} --config jsTestDriverCoverage.conf --port 5225"/>
         </exec>
@@ -167,6 +243,9 @@
 
     <!-- Runs coverage analysis for the tests. -->
     <target name="test-coverage" depends="set.properties" description="Runs the unit tests together with code coverage. The server must be running (i.e. 'server-coverage')">
+        <!-- Copy the jsTestDriverCoverage configuration to root. -->
+        <copy file="test/jsTestDriverCoverage.conf" todir="${basedir}" overwrite="true"/>
+
         <!-- Run the tests with coverage enabled. -->
         <java jar="${jstestdriver.jar}" fork="true">
             <arg value="--config"/>
