--- a/test/jsTestDriverCoverage.conf
+++ b/test/jsTestDriverCoverage.conf
@@ -1,6 +1,7 @@
 server: http://localhost:5225
 
 load:
+# Coverage is only run with jquery, its not needed to run with various adapters.
 # required libs
   - lib/jquery-1.5.2.js
 
