Adding tests for Adapters.js

--- a/test/jsTestDriverCoverage.conf
+++ b/test/jsTestDriverCoverage.conf
@@ -28,6 +28,7 @@ load:
 # tests
   - test/unit/ColorTest.js
   - test/unit/UtilitiesTest.js
+  - test/unit/AdaptersTest.js
 
 plugin:
   - name: "coverage"
