--- a/build.xml
+++ b/build.xml
@@ -12,6 +12,19 @@
 
     <!-- Sets various properties needed during the build. -->
     <target name="set.properties">
+        <!-- Read the release names and versions for our products. -->
+        <property file="build.properties"/>
+        <filterset id="highcharts.filter">
+            <filter token="product.name" value="${highcharts.product.name}"/>
+            <filter token="product.version" value="${highcharts.product.version}"/>
+            <filter token="product.date" value="${highcharts.product.date}"/>
+        </filterset>
+        <filterset id="highstock.filter">
+            <filter token="product.name" value="${highstock.product.name}"/>
+            <filter token="product.version" value="${highstock.product.version}"/>
+            <filter token="product.date" value="${highstock.product.date}"/>
+        </filterset>
+
         <!-- folder names -->
         <property name="tools.dir" value="${basedir}/tools"/>
         <property name="build.dir" value="${basedir}/build"/>
@@ -21,13 +34,24 @@
         <property name="themes.dir" value="${basedir}/js/themes"/>
         <property name="package.dir" value="${basedir}/../highcharts.com.site/downloads/package"/>
 
-        <!-- highcharts src -->
+        <!-- highcharts/highstock src -->
         <property name="highcharts.parts.dir" location="${basedir}/js/parts"/>
+
         <property name="highcharts.src.name" value="highcharts.src.js"/>
         <property name="highcharts.src.file" value="${basedir}/js/${highcharts.src.name}"/>
-        <property name="mootools.src.file" value="${basedir}/js/adapters/mootools-adapter.src.js"/>
-        <property name="prototype.src.file" value="${basedir}/js/adapters/prototype-adapter.src.js"/>
-        <property name="exporting.src.file" value="${basedir}/js/modules/exporting.src.js"/>
+        <property name="highcharts.minified.name" value="highcharts.js"/>
+        <property name="highstock.src.name" value="highstock.src.js"/>
+        <property name="highstock.src.file" value="${basedir}/js/${highstock.src.name}"/>
+        <property name="highstock.minified.name" value="highstock.js"/>
+        <property name="mootools.src.name" value="mootools-adapter.src.js"/>
+        <property name="prototype.src.name" value="prototype-adapter.src.js"/>
+        <property name="exporting.src.name" value="exporting.src.js"/>
+        <property name="mootools.minified.name" value="mootools-adapter.js"/>
+        <property name="prototype.minified.name" value="prototype-adapter.js"/>
+        <property name="exporting.minified.name" value="exporting.js"/>
+        <property name="mootools.src.file" value="${basedir}/js/adapters/${mootools.src.name}"/>
+        <property name="prototype.src.file" value="${basedir}/js/adapters/${prototype.src.name}"/>
+        <property name="exporting.src.file" value="${basedir}/js/modules/${exporting.src.name}"/>
 
         <!-- jsLint -->
         <property name="jslint4java.dir" value="${tools.dir}/jslint4java"/>
@@ -38,17 +62,62 @@
 
         <!-- google closure compiler -->
         <property name="gcc.dir" value="${tools.dir}/google-closure-compiler"/>
-        <property name="gcc.jar" location="${gcc.dir}/compiler.jar" />
-        <property name="gcc.output.name" value="highcharts.js"/>
+        <property name="gcc.jar" location="${gcc.dir}/compiler.jar"/>
 
         <!-- YUI compressor -->
         <property name="yuicomp.dir" value="${tools.dir}/yui-compressor"/>
-        <property name="yuicomp.jar" location="${yuicomp.dir}/yuicompressor-2.4.6.jar" />
+        <property name="yuicomp.jar" location="${yuicomp.dir}/yuicompressor-2.4.6.jar"/>
         <property name="yuicomp.output.name" value="highcharts.min-yui.js"/>
 
         <!-- google js-test-driver -->
         <property name="jstestdriver.dir" value="${tools.dir}/js-test-driver"/>
         <property name="jstestdriver.jar" location="${jstestdriver.dir}/JsTestDriver-1.3.2.jar"/>
+
+        <!-- This is the list of files for highcharts -->
+        <filelist id="highcharts.files" dir="${highcharts.parts.dir}">
+            <file name="Intro.js"/>
+            <file name="Globals.js"/>
+            <file name="Utilities.js"/>
+            <file name="Adapters.js"/>
+            <file name="PathAnimation.js"/>
+            <file name="Options.js"/>
+            <file name="Color.js"/>
+            <file name="SvgRenderer.js"/>
+            <file name="VmlRenderer.js"/>
+            <file name="Chart.js"/>
+            <file name="Series.js"/>
+            <file name="LineSeries.js"/>
+            <file name="AreaSeries.js"/>
+            <file name="SplineSeries.js"/>
+            <file name="AreaSplineSeries.js"/>
+            <file name="ColumnSeries.js"/>
+            <file name="BarSeries.js"/>
+            <file name="ScatterSeries.js"/>
+            <file name="PieSeries.js"/>
+            <file name="Outro.js"/>
+        </filelist>
+
+        <!-- This is the list of files for highstock -->
+        <filelist id="highstock.files" dir="${highcharts.parts.dir}">
+            <file name="Intro.js"/>
+            <file name="Globals.js"/>
+            <file name="Utilities.js"/>
+            <file name="Adapters.js"/>
+            <file name="PathAnimation.js"/>
+            <file name="Options.js"/>
+            <file name="Color.js"/>
+            <file name="SvgRenderer.js"/>
+            <file name="VmlRenderer.js"/>
+            <file name="Chart.js"/>
+            <file name="Series.js"/>
+            <file name="LineSeries.js"/>
+            <file name="AreaSeries.js"/>
+            <file name="SplineSeries.js"/>
+            <file name="AreaSplineSeries.js"/>
+            <file name="ColumnSeries.js"/>
+            <file name="BarSeries.js"/>
+            <file name="Outro.js"/>
+        </filelist>
     </target>
 
     <!-- Set up a clean build folder. -->
@@ -60,6 +129,10 @@
 
         <mkdir dir="${dist.dir}/js/adapters"/>
         <mkdir dir="${dist.dir}/js/modules"/>
+        <mkdir dir="${dist.dir}/highcharts/js/adapters"/>
+        <mkdir dir="${dist.dir}/highcharts/js/modules"/>
+        <mkdir dir="${dist.dir}/highstock/js/adapters"/>
+        <mkdir dir="${dist.dir}/highstock/js/modules"/>
         <mkdir dir="${testoutput.dir}"/>
         <mkdir dir="${coveragereport.dir}"/>
 
@@ -69,29 +142,28 @@
 
     <!-- Assembles the source parts into one file. -->
     <target name="assemble" depends="clean">
+        <!-- Concat highcharts src and replace the product name and version -->
         <concat destfile="${highcharts.src.file}">
-            <filelist dir="${highcharts.parts.dir}">
-                <file name="Intro.js"/>
-                <file name="Globals.js"/>
-                <file name="Utilities.js"/>
-                <file name="Adapters.js"/>
-                <file name="PathAnimation.js"/>
-                <file name="Options.js"/>
-                <file name="Color.js"/>
-                <file name="SvgRenderer.js"/>
-                <file name="VmlRenderer.js"/>
-                <file name="Chart.js"/>
-                <file name="Series.js"/>
-                <file name="LineSeries.js"/>
-                <file name="AreaSeries.js"/>
-                <file name="SplineSeries.js"/>
-                <file name="AreaSplineSeries.js"/>
-                <file name="ColumnSeries.js"/>
-                <file name="BarSeries.js"/>
-                <file name="ScatterSeries.js"/>
-                <file name="PieSeries.js"/>
-                <file name="Outro.js"/>
-            </filelist>
+            <filelist refid="highcharts.files"/>
+            <filterchain>
+                <replacetokens>
+                    <token key="product.name" value="${highcharts.product.name}"/>
+                    <token key="product.version" value="${highcharts.product.version}"/>
+                    <token key="product.date" value="${highcharts.product.date}"/>
+                </replacetokens>
+            </filterchain>
+        </concat>
+
+        <!-- Concat highstock src and replace the product name and version -->
+        <concat destfile="${highstock.src.file}">
+            <filelist refid="highstock.files"/>
+            <filterchain>
+                <replacetokens>
+                    <token key="product.name" value="${highstock.product.name}"/>
+                    <token key="product.version" value="${highstock.product.version}"/>
+                    <token key="product.date" value="${highstock.product.date}"/>
+                </replacetokens>
+            </filterchain>
         </concat>
     </target>
 
@@ -99,6 +171,7 @@
     <target name="lint" depends="assemble">
         <jslint haltOnFailure="false" options="sloppy, forin, confusion, plusplus, nomen, vars, regexp, newcap, browser, undef">
             <formatter type="plain"/>
+            <!-- TODO: Replace the line below with highstock.src.file when the branch is merged. -->
             <fileset file="${highcharts.src.file}"/>
             <fileset file="${mootools.src.file}"/>
             <fileset file="${prototype.src.file}"/>
@@ -138,22 +211,27 @@
     <target name="minify" depends="assemble">
         <antcall target="compile">
             <param name="param.src" value="${highcharts.src.file}"/>
-            <param name="param.out" value="${dist.dir}/js/${gcc.output.name}"/>
+            <param name="param.out" value="${dist.dir}/highcharts/js/${highcharts.minified.name}"/>
         </antcall>
 
         <antcall target="compile">
-            <param name="param.src" value="${basedir}/js/adapters/mootools-adapter.src.js"/>
-            <param name="param.out" value="${dist.dir}/js/adapters/mootools-adapter.js"/>
+            <param name="param.src" value="${highstock.src.file}"/>
+            <param name="param.out" value="${dist.dir}/highstock/js/${highstock.minified.name}"/>
         </antcall>
 
         <antcall target="compile">
-            <param name="param.src" value="${basedir}/js/adapters/prototype-adapter.src.js"/>
-            <param name="param.out" value="${dist.dir}/js/adapters/prototype-adapter.js"/>
+            <param name="param.src" value="${mootools.src.file}"/>
+            <param name="param.out" value="${dist.dir}/js/adapters/${mootools.minified.name}"/>
         </antcall>
 
         <antcall target="compile">
-            <param name="param.src" value="${basedir}/js/modules/exporting.src.js"/>
-            <param name="param.out" value="${dist.dir}/js/modules/exporting.js"/>
+            <param name="param.src" value="${prototype.src.file}"/>
+            <param name="param.out" value="${dist.dir}/js/adapters/${prototype.minified.name}"/>
+        </antcall>
+
+        <antcall target="compile">
+            <param name="param.src" value="${exporting.src.file}"/>
+            <param name="param.out" value="${dist.dir}/js/modules/${exporting.minified.name}"/>
         </antcall>
     </target>
 
@@ -161,93 +239,88 @@
     <target name="build" depends="lint, minify" description="Builds the source and runs jsLint and minify.">
     </target>
 
-    <!-- Finds the current version number and product name from the source. -->
-    <target name="retrieve-version">
-        <loadfile property="version.number" srcFile="${highcharts.src.file}">
-            <filterchain>
-                <tailfilter lines="5"/>
-                <linecontains>
-                    <contains value="version"/>
-                </linecontains>
-                <striplinebreaks/>
-                <trim/>
-                <replacestring from="version: '" to=""/>
-                <replacestring from="'" to=""/>
-           </filterchain>
-        </loadfile>
-        <loadfile property="product.name" srcFile="${highcharts.src.file}">
-            <filterchain>
-                <tailfilter lines="5"/>
-                <linecontains>
-                    <contains value="product"/>
-                </linecontains>
-                <striplinebreaks/>
-                <trim/>
-                <replacestring from="product: '" to=""/>
-                <replacestring from="'," to=""/>
-           </filterchain>
-        </loadfile>
-    </target>
-
     <!-- Builds the source and assembles a distribution package. -->
-    <target name="dist" depends="build, retrieve-version" description="Builds the source and assembles a distribution package.">
+    <target name="dist" depends="build" description="Builds the source and assembles distribution packages.">
         <echo message=""/>
-        <echo message="--- Now building: ${product.name} - ${version.number} ---"/>
+        <echo message="--- Building distribution packages for ---"/>
+        <echo message=""/>
+        <echo message="    ${highcharts.product.name} - ${highcharts.product.version} (${highcharts.product.date})"/>
+        <echo message="    ${highstock.product.name} - ${highstock.product.version} (${highstock.product.date})"/>
         <echo message=""/>
 
         <!-- 1. Check for any console statements -->
-        <fail message="Source contains console statements">
+        <fail message="Source contains console or alert statements">
             <condition>
                 <or>
                     <resourcecontains resource="${highcharts.src.file}" substring="console."/>
+                    <resourcecontains resource="${highstock.src.file}" substring="console."/>
                     <resourcecontains resource="${mootools.src.file}" substring="console."/>
                     <resourcecontains resource="${prototype.src.file}" substring="console."/>
                     <resourcecontains resource="${exporting.src.file}" substring="console."/>
+                    <resourcecontains resource="${highcharts.src.file}" substring="alert("/>
+                    <resourcecontains resource="${highstock.src.file}" substring="alert("/>
+                    <resourcecontains resource="${mootools.src.file}" substring="alert("/>
+                    <resourcecontains resource="${prototype.src.file}" substring="alert("/>
+                    <resourcecontains resource="${exporting.src.file}" substring="alert("/>
                 </or>
             </condition>
         </fail>
 
-        <!-- 2. Check that version numbers in sources are correct -->
-        <fail message="Source is missing version info">
-            <condition>
-                <not>
-                    <and>
-                        <resourcecontains resource="${highcharts.src.file}" substring="${product.name} JS v${version.number}"/>
-                        <resourcecontains resource="${mootools.src.file}" substring="${product.name} JS v${version.number}"/>
-                        <resourcecontains resource="${prototype.src.file}" substring="${product.name} JS v${version.number}"/>
-                        <resourcecontains resource="${exporting.src.file}" substring="${product.name} JS v${version.number}"/>
-                    </and>
-                </not>
-            </condition>
-        </fail>
+        <!-- 2. Copy highcharts source and minified versions, adapters, modules, themes. Replace product and version at the same time -->
+        <copy file="${highcharts.src.file}" todir="${dist.dir}/highcharts/js"><filterset refid="highcharts.filter"/></copy>
+        <copy file="${highstock.src.file}" todir="${dist.dir}/highstock/js"><filterset refid="highstock.filter"/></copy>
 
-        <!-- 3. Copy highcharts source and minified versions, adapters, modules, themes -->
-        <copy file="${highcharts.src.file}" todir="${dist.dir}/js"/>
-        <copy file="${mootools.src.file}" todir="${dist.dir}/js/adapters"/>
-        <copy file="${prototype.src.file}" todir="${dist.dir}/js/adapters"/>
-        <copy file="${exporting.src.file}" todir="${dist.dir}/js/modules"/>
-        <copy todir="${dist.dir}/js/themes">
+        <copy file="${mootools.src.file}" todir="${dist.dir}/highcharts/js/adapters"><filterset refid="highcharts.filter"/></copy>
+        <copy file="${dist.dir}/js/adapters/${mootools.minified.name}" todir="${dist.dir}/highcharts/js/adapters"><filterset refid="highcharts.filter"/></copy>
+        <copy file="${mootools.src.file}" todir="${dist.dir}/highstock/js/adapters"><filterset refid="highstock.filter"/></copy>
+        <copy file="${dist.dir}/js/adapters/${mootools.minified.name}" todir="${dist.dir}/highstock/js/adapters"><filterset refid="highstock.filter"/></copy>
+
+        <copy file="${prototype.src.file}" todir="${dist.dir}/highcharts/js/adapters"><filterset refid="highcharts.filter"/></copy>
+        <copy file="${dist.dir}/js/adapters/${prototype.minified.name}" todir="${dist.dir}/highcharts/js/adapters"><filterset refid="highcharts.filter"/></copy>
+        <copy file="${prototype.src.file}" todir="${dist.dir}/highstock/js/adapters"><filterset refid="highstock.filter"/></copy>
+        <copy file="${dist.dir}/js/adapters/${prototype.minified.name}" todir="${dist.dir}/highstock/js/adapters"><filterset refid="highstock.filter"/></copy>
+
+        <copy file="${exporting.src.file}" todir="${dist.dir}/highcharts/js/modules"><filterset refid="highcharts.filter"/></copy>
+        <copy file="${dist.dir}/js/modules/${exporting.minified.name}" todir="${dist.dir}/highcharts/js/modules"><filterset refid="highcharts.filter"/></copy>
+        <copy file="${exporting.src.file}" todir="${dist.dir}/highstock/js/modules"><filterset refid="highstock.filter"/></copy>
+        <copy file="${dist.dir}/js/modules/${exporting.minified.name}" todir="${dist.dir}/highstock/js/modules"><filterset refid="highstock.filter"/></copy>
+
+        <copy todir="${dist.dir}/highcharts/js/themes">
+            <fileset dir="${themes.dir}"/>
+        </copy>
+        <copy todir="${dist.dir}/highstock/js/themes">
             <fileset dir="${themes.dir}"/>
         </copy>
 
-        <!-- 4. Copy examples -->
-        <copy todir="${dist.dir}/examples">
+        <!-- 3. Copy examples -->
+        <copy todir="${dist.dir}/highcharts/examples">
             <fileset dir="${package.dir}/examples"/>
         </copy>
-        <copy file="${package.dir}/index.htm" todir="${dist.dir}"/>
+        <copy file="${package.dir}/index.htm" todir="${dist.dir}/highcharts"/>
+        <copy todir="${dist.dir}/highstock/examples">
+            <fileset dir="${package.dir}/examples"/>
+        </copy>
+        <copy file="${package.dir}/index.htm" todir="${dist.dir}/highstock"/>
 
-        <!-- 5. Copy graphics -->
-        <copy todir="${dist.dir}/graphics">
+        <!-- 4. Copy graphics -->
+        <copy todir="${dist.dir}/highcharts/graphics">
+            <fileset dir="${package.dir}/graphics"/>
+        </copy>
+        <copy todir="${dist.dir}/highstock/graphics">
             <fileset dir="${package.dir}/graphics"/>
         </copy>
 
-        <!-- 6. Copy php export server -->
-        <copy todir="${dist.dir}/exporting-server">
+        <!-- 5. Copy php export server -->
+        <copy todir="${dist.dir}/highcharts/exporting-server">
+            <fileset dir="${package.dir}/exporting-server"/>
+        </copy>
+        <copy todir="${dist.dir}/highstock/exporting-server">
             <fileset dir="${package.dir}/exporting-server"/>
         </copy>
 
-        <!-- 7. Create a zip file -->
-        <zip destfile="${dist.dir}/${product.name}-${version.number}.zip" basedir="${dist.dir}"/>
+        <!-- 6. Create a zip files -->
+        <zip destfile="${dist.dir}/${highcharts.product.name}-${highcharts.product.version}.zip" basedir="${dist.dir}/highcharts"/>
+        <zip destfile="${dist.dir}/${highstock.product.name}-${highstock.product.version}.zip" basedir="${dist.dir}/highstock"/>
     </target>
 
     <!-- Starts the test driver server. -->
