--- a/build.xml
+++ b/build.xml
@@ -170,6 +170,7 @@
     <!-- This target convert any mixed line endings to crlf. -->
     <target name="check-crlf" depends="assemble">
         <fixcrlf srcDir="${basedir}/js" includes="**/*.js" eol="crlf" fixlast="false"/>
+        <fixcrlf srcDir="${basedir}/test" includes="**/*.js" eol="crlf" fixlast="false"/>
     </target>
 
     <!-- Runs jslint on source code. -->
