Added a utility to track down svg elements that are not removed when they should

--- a/test/jsTestDriver.conf
+++ b/test/jsTestDriver.conf
@@ -14,6 +14,7 @@ load:
   - js/parts/Options.js
   - js/parts/Color.js
   - js/parts/SvgRenderer.js
+  - js/parts/debug/ElementMonitor.js
   - js/parts/VmlRenderer.js
   - js/parts/Chart.js
   - js/parts/Series.js
@@ -27,7 +28,8 @@ load:
   - js/parts/PieSeries.js
 
 # tests
-  - test/unit/ColorTest.js
-  - test/unit/UtilitiesTest.js
-  - test/unit/AdaptersTest.js
-  - test/unit/RendererTest.js
+#  - test/unit/ColorTest.js
+#  - test/unit/UtilitiesTest.js
+#  - test/unit/AdaptersTest.js
+#  - test/unit/RendererTest.js
+  - test/unit/ChartMemoryTest.js
