Moved ChartMemoryTest to gc

--- a/test/jsTestDriver.conf
+++ b/test/jsTestDriver.conf
@@ -28,8 +28,13 @@ load:
   - js/parts/PieSeries.js
 
 # tests
-#  - test/unit/ColorTest.js
-#  - test/unit/UtilitiesTest.js
-#  - test/unit/AdaptersTest.js
-#  - test/unit/RendererTest.js
-  - test/unit/ChartMemoryTest.js
+  - test/unit/ColorTest.js
+  - test/unit/UtilitiesTest.js
+  - test/unit/AdaptersTest.js
+  - test/unit/RendererTest.js
+  - test/gc/ChartMemoryTest.js
+  - test/gc/ColumnChartMemoryTest.js
+  - test/gc/LineChartMemoryTest.js
+  - test/gc/SplineChartMemoryTest.js
+  - test/gc/AreaChartMemoryTest.js
+  - test/gc/BarChartMemoryTest.js
