Fixed leak with piechart shadows and removed mousetracker events on destroy

--- a/test/unit/jsTestDriver.conf
+++ b/test/unit/jsTestDriver.conf
@@ -38,3 +38,4 @@ load:
   - test/gc/SplineChartMemoryTest.js
   - test/gc/AreaChartMemoryTest.js
   - test/gc/BarChartMemoryTest.js
+  - test/gc/PieChartMemoryTest.js
