--- a/build.xml
+++ b/build.xml
@@ -352,9 +352,10 @@
 
     <target name="test-all" description="Runs the unit tests on all adapters. The server must be running (i.e. 'server').">
         <!-- Param "testrun.name" used in echo output and to build a folder name where test result goes. -->
+        <!-- Param "testrun.type" tells which type of test this is, also corresponds to the path name for the conf file. -->
         <!-- Param "required.lib" specifies wich third-party lib is used while testing. -->
         <!-- Param "required.adapter" specifies the corresponding adapter that matches the lib. Leave unset for the built-in jquery support. -->
-		
+
         <!-- jquery versions -->
         <antcall target="test-specific-lib">
             <param name="testrun.type" value="unit"/>
@@ -406,7 +407,7 @@
         </antcall>
     </target>
 
-    <target name="test" description="Runs the unit tests latest jquery. The server must be running (i.e. 'server').">
+    <target name="test" description="Runs the unit tests using latest jquery. The server must be running (i.e. 'server').">
         <antcall target="test-specific-lib">
             <param name="testrun.type" value="unit"/>
             <param name="testrun.name" value="jquery-1.6.2"/>
@@ -414,9 +415,17 @@
         </antcall>
     </target>
 
-    <target name="it" description="Runs the integration tests latest jquery. The server must be running (i.e. 'server').">
+    <target name="it" description="Runs the integration tests using latest jquery. The server must be running (i.e. 'server').">
         <antcall target="test-specific-lib">
             <param name="testrun.type" value="it"/>
+            <param name="testrun.name" value="jquery-1.6.2"/>
+            <param name="required.lib" value="jquery-1.6.2.js"/>
+        </antcall>
+    </target>
+
+    <target name="gc" description="Runs the leaks tests using latest jquery. The server must be running (i.e. 'server').">
+        <antcall target="test-specific-lib">
+            <param name="testrun.type" value="gc"/>
             <param name="testrun.name" value="jquery-1.6.2"/>
             <param name="required.lib" value="jquery-1.6.2.js"/>
         </antcall>
@@ -450,7 +459,7 @@
     <!-- Runs the tests without coverage. This is much faster than with coverage enabled. -->
     <target name="run-test" depends="set.properties">
         <echo message="/------------------------------------------------------------"/>
-        <echo message="  Running tests using: ${testrun.name}"/>
+        <echo message="  Running ${testrun.type} tests using: ${testrun.name}"/>
         <echo message=""/>
         <echo message=""/>
         <java jar="${jstestdriver.jar}" fork="true">
