--- a/test/gc/jsTestDriver.conf
+++ b/test/gc/jsTestDriver.conf
@@ -14,6 +14,7 @@ load:
   - js/parts/Options.js
   - js/parts/Color.js
   - js/parts/SvgRenderer.js
+  - js/parts/debug/ElementMonitor.js
   - js/parts/VmlRenderer.js
   - js/parts/Chart.js
   - js/parts/Series.js
@@ -27,7 +28,10 @@ load:
   - js/parts/PieSeries.js
 
 # tests
-  - test/unit/ColorTest.js
-  - test/unit/UtilitiesTest.js
-  - test/unit/AdaptersTest.js
-  - test/unit/RendererTest.js
+  - test/gc/ChartMemoryTest.js
+  - test/gc/ColumnChartMemoryTest.js
+  - test/gc/LineChartMemoryTest.js
+  - test/gc/SplineChartMemoryTest.js
+  - test/gc/AreaChartMemoryTest.js
+  - test/gc/BarChartMemoryTest.js
+  - test/gc/PieChartMemoryTest.js
