Added pie and scatter series to highstock build. Closes #454.

--- a/build.xml
+++ b/build.xml
@@ -116,6 +116,8 @@
             <file name="AreaSplineSeries.js"/>
             <file name="ColumnSeries.js"/>
             <file name="BarSeries.js"/>
+            <file name="ScatterSeries.js"/>
+            <file name="PieSeries.js"/>
             <file name="DataGrouping.js"/>
             <file name="OHLCSeries.js"/>
             <file name="CandlestickSeries.js"/>
