Updated version, removed unused variables

--- a/build.properties
+++ b/build.properties
@@ -5,5 +5,5 @@ highcharts.product.version=2.1.6
 highcharts.product.date=2011-07-08
 
 highstock.product.name=Highstock
-highstock.product.version=1.0 Beta
-highstock.product.date=2011-08-02
+highstock.product.version=1.0
+highstock.product.date=2011-10-18
