--- a/test/unit/jsTestDriverCoverage.conf
+++ b/test/unit/jsTestDriverCoverage.conf
@@ -36,5 +36,5 @@ load:
 
 plugin:
   - name: "coverage"
-    jar: "tools/js-test-driver/coverage-1.3.3b.jar"
+    jar: "tools/js-test-driver/coverage-1.3.3d.jar"
     module: "com.google.jstestdriver.coverage.CoverageModule"
